implemented storing brands count