@@ -2,11 +2,12 @@ package com.robobg.config;
 
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.robobg.entity.Robot;
 import com.robobg.entity.Role;
 import com.robobg.entity.User;
+import com.robobg.entity.dtos.RobotDTO.CreateRobotDTO;
 import com.robobg.repository.RobotRepository;
 import com.robobg.repository.UserRepository;
+import com.robobg.service.impl.RobotServiceImpl;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -14,7 +15,6 @@ import org.springframework.stereotype.Component;
 import java.io.InputStream;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class DatabaseSeeder implements CommandLineRunner {
@@ -22,17 +22,19 @@ public class DatabaseSeeder implements CommandLineRunner {
     private final PasswordEncoder passwordEncoder;
     private final ObjectMapper objectMapper;
     private final RobotRepository robotRepository;
+    private final RobotServiceImpl robotService;
     @Value("${ADMIN_USERNAME}")
     private String adminUsername;
     @Value("${ADMIN_PASSWORD}")
     private String adminPassword;
 
 
-    public DatabaseSeeder(UserRepository userRepository, PasswordEncoder passwordEncoder, ObjectMapper objectMapper, RobotRepository robotRepository) {
+    public DatabaseSeeder(UserRepository userRepository, PasswordEncoder passwordEncoder, ObjectMapper objectMapper, RobotRepository robotRepository, RobotServiceImpl robotService) {
         this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
         this.objectMapper = objectMapper;
         this.robotRepository = robotRepository;
+        this.robotService = robotService;
     }
 
     @Override
@@ -46,14 +48,14 @@ public class DatabaseSeeder implements CommandLineRunner {
         }
 
         InputStream inputStream = getClass().getResourceAsStream("/robots.json");
-        Robot[] data = objectMapper.readValue(inputStream, Robot[].class);
+        CreateRobotDTO[] data = objectMapper.readValue(inputStream, CreateRobotDTO[].class);
 
-        List<Robot> robotsToSave = Arrays.stream(data)
+        List<CreateRobotDTO> robotsToSave = Arrays.stream(data)
                 .filter(robot -> !robotRepository.existsByModel(robot.getModel()))
-                .collect(Collectors.toList());
+                .toList();
 
-        if (!robotsToSave.isEmpty()) {
-            robotRepository.saveAll(robotsToSave);
+        for (CreateRobotDTO robot : robotsToSave) {
+            robotService.saveRobot(robot);
         }
     }
 }
